Have horizontal scroll working but they are squished together, need to fix

--- a/student_feedback_project/static/css/cards.css
+++ b/student_feedback_project/static/css/cards.css
@@ -159,3 +159,7 @@
   border-radius: 25px;
   border-width: thick;
 }
+
+.row {
+  margin: 0 -5px;
+}
